Added section 6 and 7 for appointment booking

--- a/index.css
+++ b/index.css
@@ -249,6 +249,7 @@ nav ul.menu li a:hover {
 .section5-content {
     display: flex;
     justify-content: center;
+    margin-bottom: 100px;
 }
 
 .pricing {
@@ -299,4 +300,69 @@ ul.features li {
     border-radius: 10px;
     padding: 10px 80px;
     margin: 20px;
+}
+
+.section6 {
+    background-color: #1b5793;
+    width: 100%;
+    height: auto;
+    padding-bottom: 380px;
+}
+
+.branches {
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    color: white;
+}
+
+.branches-txt, .branches-img {
+    width: 40%;
+}
+
+.pngwing {
+    width: 100%;
+}
+
+.contact {
+    display: flex;
+    justify-content: center;
+    margin-top: -280px;
+}
+
+.contact-form {
+    width: 40%;
+    background-color: white;
+}
+
+.contact-form h2, .contact-form button {
+    text-align: center;
+}
+
+.contact-cover {
+    height: 500px;
+}
+
+.contact-form {
+    padding: 30px 10px;
+}
+
+.contact-form input, .contact-form select {
+    height: 35px;
+    width: 90%;
+    background-color: #2a33580a;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.contact-form button {
+    background-color: #23A6F0;
+    padding: 10px 0px;
+    border-radius: 5px;
+    width: 90%;
+}
+
+.contact-form label{
+    font-weight: bold;
+    font-size: 1rem;
 }
