--- a/index.css
+++ b/index.css
@@ -23,10 +23,11 @@ a {
 .main {
     width: 100%;
     height: 100vh;
-    background-image: url('Assets/hero-cover3.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('Assets/hero-cover3.png');
     background-size: cover;
     background-position: top left;
     margin-bottom: 200px;
+    opacity: 0.9;
 }
 
 .logo {
