It will create responsive nav bar for mobile devices

--- a/index.css
+++ b/index.css
@@ -44,6 +44,10 @@ nav {
     width: 100%;
 }
 
+nav .menu-btn {
+    display: none;
+}
+
 nav ul {
     display: flex;
     margin: 0px;
@@ -411,4 +415,100 @@ footer {
 .social-icons a {
     color: #23A6F0;
     padding: 0px 10px;
+}
+
+
+/* CSS for responisiveness */
+
+@media (max-width:1100px) {
+    nav {
+        justify-content: space-between;
+        height: 65px;
+    }
+
+    .menu {
+        display: none;
+        position: absolute;
+        top: 65px;
+        left: 0px;
+        background-color: #1b5793;
+        border-bottom: 4px solid #1b5793;
+        width: 100%;
+    }
+
+    .menu2 {
+        top: 260px;
+    }
+
+    .menu li {
+        width: 100%;
+    }
+
+    nav .menu li a {
+        width: 100%;
+        height: 40px;
+        justify-content: center;
+        align-items: center;
+        margin: 0px;
+        padding: 25px;
+        border: 1px solid #2a33580a;
+    }
+
+    nav .menu-icon {
+        cursor: pointer;
+        float: right;
+        padding: 28px 20px;
+        position: relative;
+        user-select: none;
+    }
+
+    nav .menu-icon .nav-icon {
+        background-color: #23A6F0;
+        display: block;
+        height: 2px;
+        position: relative;
+        transition: background 0.2s ease-out;
+        width: 18px;
+    }
+
+    nav .menu-icon .nav-icon:before,
+    nav .menu-icon .nav-icon:after {
+        background: #23A6F0;
+        content: '';
+        display: block;
+        height: 100%;
+        position: absolute;
+        transition: all ease-out 0.2s;
+        width: 100%;
+    }
+
+    nav .menu-btn:checked ~ .menu {
+        display: block;
+    }
+
+    nav .menu-icon .nav-icon:before {
+        top: 5px;
+    }
+
+    nav .menu-icon .nav-icon:after {
+        top: -5px;
+    }
+
+    nav .menu-btn:checked ~ .menu-icon .nav-icon {
+        background: transparent;
+    }
+
+    nav .menu-btn:checked ~ .menu-icon .nav-icon:before {
+        transform: rotate(-45deg);
+        top: 0;
+    }
+
+    nav .menu-btn:checked ~ .menu-icon .nav-icon:after {
+        transform: rotate(45deg);
+        top: 0;
+    }
+
+    nav .menu-btn {
+        display: none;
+    }
 }
