It will fix change image display for the first part of section 6

--- a/index.css
+++ b/index.css
@@ -593,6 +593,17 @@ footer {
     .banner1, .banner2, .banner3 {
         width: 50%;
     }
+
+    .branches-txt {
+        background-image: linear-gradient(rgba(48, 103, 157, 0.8), rgba(48, 103, 157, 0.8)), url('Assets/pngwing 1.png');
+        background-position: top;
+        width: 80%;
+        text-align: center;
+    }
+
+    .branches-img {
+        display: none;
+    }
 }
 
 @media (max-width: 595px) {
