It will change display for contact cover image and width of contact form

--- a/index.css
+++ b/index.css
@@ -604,6 +604,14 @@ footer {
     .branches-img {
         display: none;
     }
+
+    .contact-cover {
+        display: none;
+    }
+
+    .contact-form {
+        width: 80%;
+    }
 }
 
 @media (max-width: 595px) {
@@ -619,5 +627,9 @@ footer {
 
     .contact2 {
         margin-top: 10px;
+    }
+
+    .standard, .free, .premium {
+        width: 70%;
     }
 }
