It will change footer to flex wrap and align footer text to center

--- a/index.css
+++ b/index.css
@@ -651,3 +651,14 @@ footer {
         flex-wrap: wrap;
     }
 }
+
+@media (max-width: 533px) {
+    .links {
+        width: 90%;
+    }
+
+    footer {
+        flex-wrap: wrap;
+        text-align: center;
+    }
+}
