--- a/index.css
+++ b/index.css
@@ -419,6 +419,18 @@ footer {
 
 /* CSS for responisiveness */
 
+@media (max-width: 1100px) and (orientation:landscape)  {
+    .main {
+        height: 150vh;
+    }
+}
+
+@media (max-width: 770px) and (orientation:landscape)  {
+    .main {
+        height: 150vh;
+    }
+}
+
 @media (max-width:1100px) {
     nav {
         justify-content: space-between;
@@ -509,6 +521,10 @@ footer {
 
     nav .menu-btn {
         display: none;
+    }
+
+    .banners div {
+        margin-top: -45px;
     }
 }
 
